# geany

./: meson.build  meson_options.txt
ctags/: meson.build
po/: POTFILES.in  meson.build
scintilla/: meson.build
scintilla/include/: meson.build
src/: meson.build
src/tagmanager/: meson.build
