
## Process this file with automake to produce Makefile.in

# noinst_HEADERS = \
# 	ILexer.h \
# 	ILoader.h \
# 	Platform.h 

scintilla_headers = [
 	'Compat.h',
 	'SciLexer.h',
 	'Scintilla.h',
 	'Scintilla.iface',
 	'ScintillaWidget.h',
 	'Sci_Position.h']

install_headers(scintilla_headers, subdir: 'geany/scintilla')
